# wikidata-anime-episode-quick-add

./: Pipfile  README.md  pyproject.toml  script.py
.github/: dependabot.yml
.github/workflows/: auto-update.yml  codeql-analysis.yml
